# OA-P-and-Infomatics

./: task2.cpp  task2.sql  task3.cpp  uwohidfu.cpp
RK2_Tasks/: CMakeLists.txt  Makefile  bank_system.cpp
Seminar 2/: num1.cpp  num10.cpp  num11.cpp  num2.cpp  num3.cpp  num4.cpp  num5.cpp  num6.cpp  num7.cpp  num8.cpp  num9.cpp
Seminar 3/: t1.cpp  t2.cpp  t3.cpp  t4.cpp  t5.cpp  t6.cpp  t7.cpp  t8.cpp
Seminar 3/geom/: geom_t1.cpp  geom_t2.cpp  geom_t3.cpp  geom_t4.cpp  geom_t5.cpp  geom_t6.cpp
Seminar 4/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp
forex/: CMakeLists.txt  README.md
forex/include/: Admin.h  DatabaseConnection.h  Order.h  OrderItem.h  Payment.h  User.h
forex/sql/: functions.sql  procedures.sql  tables.sql  triggers.sql
forex/src/: Admin.cpp  User.cpp  main.cpp
Лабораторка №4/: CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  lab4  log.txt  main.cpp
Лабораторная №2 Инф/: client.sh  create_report.sh  even_numbers.sh  even_numbers.sh.save  multiply.sh  report.txt  running_processes.sh  server.sh
Лабораторная №2 ОАиП/: practica.cpp  task.cpp
ОАиП Лаб№3/: number1.cpp
